<resources>
    <string name="app_name">covery</string>

    <string name="app_description">커버곡 챌린지</string>
    <string name="action_intro">커버곡 챌린지를 설명합니다></string>

    <string name="action_sign_in_kakao">카카오로 시작하기</string>
    <string name="action_sign_in_google">구글로 시작하기</string>
    <string name="action_pass">시작하기</string>

    <string name="board">게시판</string>
    <string name="chat">채팅</string>
    <string name="signin_complete">님 환영합니다</string>
    <string name="signin_fail">로그인 실패</string>

    <string name="menu_home">홈</string>
    <string name="menu_playlist">플레이리스트</string>
    <string name="menu_mic">녹음</string>
    <string name="menu_set">설정</string>
    <string name="menu_profile">마이페이지</string>

    <string name="covery">COVERY</string>
    <string name="rangking">실시간 순위</string>
    <string name="newest">최신 업로드</string>
    <string name="anonymous">익명</string>

    <string name="count">0</string>
    <string name="Post">Post</string>
    <string name="Follower">Follower</string>
    <string name="Following">Following</string>
    <string name="myCover">나의 커버곡</string>
    <string name="myComment">나의 댓글</string>
    <string name="myFavorite">좋아요한 커버곡</string>

    <string name="myBring">녹음파일 가져오기</string>
    <string name="myMic">커버곡 녹음하기</string>
    <string name="btnRecord">녹음시작</string>
    <string name="btnStop">녹음중지</string>
    <string name="btnStart">재생</string>
    <string name="btnUpload">업로드</string>
    <string name="musicName">노래제목을 입력하시오</string>
    <string name="btnBring">가져오기</string>


    <string-array name="blood_type">
        <item>O형</item>
        <item>A형</item>
        <item>B형</item>
        <item>AB형</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>