<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BoardHome">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/covery_logo_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <android.widget.Button
            android:id="@+id/bring_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:background="@drawable/back_frame"
            android:drawableLeft="@drawable/ic_baseline_file_upload_24"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/myBring"/>
        <android.widget.Button
            android:id="@+id/start_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:background="@drawable/back_frame"
            android:drawableLeft="@drawable/ic_mic"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/myMic"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/bring_music_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <android.widget.Button
                android:id="@+id/btn_bring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBring"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/recordUpload_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/edittext_rounded_style"
                android:text="@string/musicName"
                android:textColorHint="@color/gray"/>
            <android.widget.Button
                android:id="@+id/btn_recordUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUpload"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/start_record_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <EditText
                android:id="@+id/upload_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:background="@drawable/edittext_rounded_style"
                android:hint="@string/musicName"
                android:textColorHint="@color/gray"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <SeekBar
                    android:id="@+id/card_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:maxHeight="4dp"
                    android:minHeight="4dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:progressDrawable="@drawable/player_seek_background"
                    android:thumb="@drawable/player_seek_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:progress="40" />
                <TextView
                    android:id="@+id/card_play_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/card_seek_bar"
                    app:layout_constraintTop_toBottomOf="@id/card_seek_bar"
                    tools:text="00:00" />
                <TextView
                    android:id="@+id/card_total_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/card_seek_bar"
                    app:layout_constraintTop_toBottomOf="@id/card_seek_bar"
                    tools:text="00:00" />

                <ImageButton
                    android:id="@+id/audioRecordImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="5dp"
                    android:padding="16dp"
                    android:src="@drawable/ic_baseline_play_arrow_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/card_total_time_text_view"
                    app:layout_constraintStart_toEndOf="@+id/audioRecordText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/audioRecordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="28dp"
                    android:text="녹음 시작"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/audioRecordImageBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_play_time_text_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <android.widget.Button
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUpload"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
